Fixed z-index issues

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -42,4 +42,5 @@ li{
 
 .sidebar-right{
   width: 100%;
+  z-index: 1;
 }
